Lines in Tibetan text do not wrap
Categories
(Core :: Internationalization, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox80 | --- | fixed |
People
(Reporter: kbrosnan, Assigned: jfkthame)
References
()
Details
Attachments
(2 files)
Visit https://www.lotsawahouse.org/words-of-the-buddha/twenty-one-tara-praise in a small veiwport Firefox such as Firefox for Android or Firefox using the responsive design mode.
Expected that the lines wrap and the text fits nicely in a mobile viewport. See the "See also" section for a link to a Fenix bug showing Chrome and Firefox behavior.
Comment 1•5 years ago
|
||
Original reporter here - for me it does work properly on desktop Firefox (Linux) in responsive design mode, but fails to wrap on Android, both with Firefox Preview and with Android Firefox. Couldn't test on Windows or MacOS.
| Reporter | ||
Comment 2•5 years ago
|
||
| Assignee | ||
Comment 3•5 years ago
|
||
Tibetan is among the scripts treated as "complex" by intl/lwbrk/LineBreaker.cpp, which means we pass the text to a platform-specific line-breaking routine to find appropriate break points. Unfortunately, on Android we don't really have such a backend, so we fall back to a built-in implementation in intl/lwbrk/nsRuleBreaker.cpp, which only knows about Thai; it doesn't have any support for Tibetan.
| Assignee | ||
Comment 4•5 years ago
|
||
The real solution here will come when we move to a new line-breaking implementation based on ICU or some other segmentation API (e.g. a Rust i18n crate), but in the meantime I think we can improve the behavior trivially by just treating the intersyllabic dot (TSHEG) like a hyphen for line-breaking purposes. This will be far better than leaving Tibetan sentences entirely unbreakable.
| Assignee | ||
Comment 5•5 years ago
|
||
Updated•5 years ago
|
Comment 7•5 years ago
|
||
| bugherder | ||
Description
•