Bug 1647377 - Provide basic line-breaking support for Tibetan on Android by treating TSHEG like a hyphen. r=m_kato

Differential Revision: https://phabricator.services.mozilla.com/D81441