intl/lwbrk/LineBreaker.cpp
@@ -367,10 +367,18 @@ static inline bool IS_NONBREAKABLE_SPACE(char16_t u) {
 }
 
 static inline bool IS_HYPHEN(char16_t u) {
-  return (u == U_HYPHEN || u == 0x058A ||  // ARMENIAN HYPHEN
-          u == 0x2010 ||                   // HYPHEN
+  return (u == U_HYPHEN || u == 0x2010 ||  // HYPHEN
           u == 0x2012 ||                   // FIGURE DASH
-          u == 0x2013);                    // EN DASH
+          u == 0x2013 ||                   // EN DASH
+#if ANDROID
+          /* Bug 1647377: On Android, we don't have a "platform" backend
+           * that supports Tibetan (nsRuleBreaker.cpp only knows about
+           * Thai), so instead we just treat the TSHEG like a hyphen to
+           * provide basic line-breaking possibilities.
+           */
+          u == 0x0F0B ||  // TIBETAN MARK INTERSYLLABIC TSHEG
+#endif
+          u == 0x058A);  // ARMENIAN HYPHEN
 }
 
 static int8_t GetClass(uint32_t u, LineBreaker::Strictness aLevel,
@@ -618,8 +626,10 @@ static int8_t GetClass(uint32_t u, LineBreaker::Strictness aLevel,
         return GETCLASSFROMTABLE(gLBClass00, uint16_t(U_HYPHEN));
       }
     } else if (0x0F00 == h) {
-      if (0x08 == l || 0x0C == l || 0x12 == l) {
-        return CLASS_NON_BREAKABLE;
+      // Tibetan chars with class = BA
+      if (0x34 == l || 0x7f == l || 0x85 == l || 0xbe == l || 0xbf == l ||
+          0xd2 == l) {
+        return CLASS_BREAKABLE;
       }
     } else if (0x1800 == h) {
       if (0x0E == l) {
