intl/lwbrk/LineBreaker.h
@@ -72,8 +72,14 @@ static inline bool NS_IsSpace(char16_t u) {
 }
 
 static inline bool NS_NeedsPlatformNativeHandling(char16_t aChar) {
-  return (0x0e01 <= aChar && aChar <= 0x0fff) ||  // Thai, Lao, Tibetan
-         (0x1780 <= aChar && aChar <= 0x17ff);    // Khmer
+  return
+#if ANDROID  // Bug 1647377: no "platform native" support for Tibetan;
+             // better to just use our class-based breaker.
+      (0x0e01 <= aChar && aChar <= 0x0eff) ||  // Thai, Lao
+#else
+      (0x0e01 <= aChar && aChar <= 0x0fff) ||  // Thai, Lao, Tibetan
+#endif
+      (0x1780 <= aChar && aChar <= 0x17ff);  // Khmer
 }
 
 }  // namespace intl
